# ePubReader

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  example_integration.rs  package.json  run.sh  test_context_menu.html
.kiro/specs/advanced-search-system/: design.md  requirements.md  tasks.md
.kiro/specs/comprehensive-annotation-system/: design.md  requirements.md  tasks.md
.kiro/specs/database-initialization-fix/: design.md  requirements.md  tasks.md
.kiro/specs/high-performance-virtual-library/: design.md  requirements.md  tasks.md
docs/: virtual_grid_usage.md
examples/: complete_integration.rs
src/: app.js  index.html  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  epub_parser.rs  file_manager.rs  lib.rs  logger.rs  main.rs  translation.rs
src/models/: annotation.rs  book.rs  library.rs  mod.rs  preferences.rs  reading_theme.rs  sync.rs
src/services/: annotation_export.rs  annotation_manager.rs  annotation_service.rs  async_image_loader.rs  book_search_service.rs  book_service.rs  database.rs  database_initializer.rs  library_manager.rs  library_service.rs  mod.rs  optimized_virtual_grid.rs  path_resolver.rs  performance_monitor.rs  reading_service.rs  sync_service.rs  virtual_library_service.rs
src/ui/: main_window.slint
src/ui/components/: book_card.slint  book_grid.slint  bookmark_panel.slint  collection_editor.slint  drag_drop_handler.slint  high_performance_library.slint  page_transition.slint  reader_view.slint  search_panel.slint  sidebar.slint  text_selection.slint  theme_controls.slint
src/ui/styles/: reading_themes.slint  themes.slint
src/utils/: image_cache.rs  mod.rs  text_search.rs
tests/: performance_tests.rs
