[package]
name = "ebook-reader"
version = "0.1.0"
description = "A modern desktop digital library management application built with Slint"
authors = ["Ebook Reader Team"]
license = "MIT"
repository = ""
edition = "2021"

[[bin]]
name = "ebook-reader"
path = "src/main.rs"

[dependencies]
# Slint GUI Framework
slint = { version = "1.4", features = ["backend-winit"] }

# Core Libraries
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full", "macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }

# Book Processing
epub = "2.0"
pdf-extract = "0.7"
image = { version = "0.24", features = ["jpeg", "png", "gif", "webp"] }

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "chrono", "uuid"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File Dialog
rfd = "0.13"

# Additional Features
once_cell = "1.19"
html-escape = "0.2"
lru = "0.12"
rayon = "1.8"
bytes = "1.5"
async-trait = "0.1"
tempfile = "3.8"

[build-dependencies]
slint-build = "1.4"

[features]
default = []

# Development profile
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

# Release profile
[profile.release]
opt-level = 3
debug = false
split-debuginfo = "packed"
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
strip = true